feat: v2.0.0 - 添加 HTML 报告、JSON 合并和三路合并
新增功能：
- HTML 差异报告：美观的可视化差异报告
- JSON 合并：支持两文件和多文件合并，多种策略
- 三路合并：解决 Git 冲突，自动检测和显示冲突
- 忽略路径：比较时忽略特定字段

新增模块：
- src/html-report.js：HTML 报告生成器
- src/merge.js：JSON 合并和三路合并

新增 CLI 命令：
- json-diff merge <target> <source> [output] - 合并 JSON 文件
- json-diff 3way <base> <local> <remote> [output] - 三路合并

新增性能选项：
- -f html - 导出 HTML 格式报告
- -i, --ignore <paths> - 忽略的路径（逗号分隔）
- -s, --strategy <type> - 合并策略（overwrite/preserve/merge）
- -a, --array-merge <type> - 数组合并方式（overwrite/concatenate/merge）
- --deep - 深度合并所有子对象
- --show-conflicts - 显示冲突详情

更新文档：
- 更新 README.md，添加新功能说明和使用示例

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@raphaellcs/json-diff",
-  "version": "1.0.0",
-  "description": "JSON 差异比较工具 - 对比两个 JSON 文件的差异",
+  "version": "2.0.0",
+  "description": "JSON 差异比较工具 - HTML 报告、合并、三路合并",
   "main": "src/index.js",
   "bin": {
     "json-diff": "./bin/cli.js"
